fix broken collapse blocks and block edit links

--- a/css/core/at-admin-rtl.css
+++ b/css/core/at-admin-rtl.css
@@ -23,7 +23,7 @@
 ul.menu,ul.menu ul,ul.menu ul ul,ul.menu ul ul ul{margin:0 1em 0 0;}
 .block-at-admin h2{text-align:right;}
 .block-at-admin legend{margin:0 -10px 0 0;}
-.at-admin-block-edit-links .item-list li{margin:0 0 0 .3em;}
+.at-admin-block-edit-links .edit-links-list li{margin:0 0 0 .3em;}
 #permissions td.permission{padding-left:0;padding-right:0.5em;}
 ul.primary{padding:0 0.3em 0.4em 0;}
 ul.primary li a{margin-right:0;margin-left:0.08em;}
