--- a/css/core/at-admin.css
+++ b/css/core/at-admin.css
@@ -79,12 +79,12 @@ ul.menu li a:hover,ul.menu li a:focus{outline:0;}
 .fieldset-block-info dt{border-bottom:1px solid #EEE;font-size:0.82em;}
 .fieldset-block-info dd{color:#777;font-size:0.94em;margin:0 0 0.3em;}
 .at-admin-block-edit-links{float:right;font-size:0.94em;margin-top:0.5em;padding-bottom:3px;}
-.at-admin-block-edit-links .item-list li{display:inline;list-style:none;margin:0 0.3em 0 0;}
-.at-admin-block-edit-links .item-list li a{-moz-border-radius:4px;-webkit-border-radius:4px;border:1px solid 
+.at-admin-block-edit-links .edit-links-list li{display:inline;list-style:none;margin:0 0.3em 0 0;}
+.at-admin-block-edit-links .edit-links-list li a{-moz-border-radius:4px;-webkit-border-radius:4px;border:1px solid 
 #BBB;color:#555;padding:3px 2px 2px 18px;text-transform:capitalize;}
-.at-admin-block-edit-links .item-list li.first a{background: url(core-images/configure.png) no-repeat 0 0;}
-.at-admin-block-edit-links .item-list li.last a{background: url(core-images/edit.png) no-repeat 0 0;}
-.at-admin-block-edit-links .item-list li a:hover{background-color:#F7F7F7;border:1px solid #464646;color:#222;}
+.at-admin-block-edit-links .edit-links-list li.first a{background: url(core-images/configure.png) no-repeat 0 0;}
+.at-admin-block-edit-links .edit-links-list li.last a{background: url(core-images/edit.png) no-repeat 0 0;}
+.at-admin-block-edit-links .edit-links-list li a:hover{background-color:#F7F7F7;border:1px solid #464646;color:#222;}
 div.block div.block-edit{top:10px;right:15px;}
 div.admin-panel{-moz-border-radius:6px;-webkit-border-radius:6px;border:1px solid #DFDFDF;margin:0 0 0.75em;padding:0;}
 div.admin .left,div.admin .right{margin-left:0;margin-right:0;width:49%;}
